--- a/pytorch/processor_explore.ipynb
+++ b/pytorch/processor_explore.ipynb
@@ -371,7 +371,7 @@
     "\n",
     "import features\n",
     "augs = [\n",
-    "\"aug_shuffle_10_per_3_cuts\"\n",
+    "\"aug_pitch_10_per_12_semi\",\n",
     "]\n",
     "\n",
     "for i in augs:\n",
